# tts-max

./: .envrc  .gitignore  .pre-commit-config.yaml  .tool-versions  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: lint.yaml  linter.yaml  publish_artifact.yaml  unittest.yaml
demos/: index.html
docs/: index.html
example/codec/: model_config.json
example/configs/: codec_training_config.json  rlhf.json  samples.jsonl  sft.json
example_configs/: samples.jsonl  sft.json
makefiles/: help.mk  uv-multirepo.mk
setup/: setup_python.sh
tools/: inference.py
tools/data/: data_merger.py  data_vectorizer.py
tools/serving/: convert_checkpoint.py  inference.py
tts/: hello.py
tts/core/: constants.py  lora.py  modeling.py  optimization.py  prompting.py  tokenization.py
tts/core/codec/: activations.py  criterion.py  decoder.py  decoder_modules.py  decoding.py  discriminator.py  encoder.py  encoder_modules.py  encoding.py  filters.py  upsampler.py
tts/data/: caching.py  data_sample.py  data_utils.py  filtering.py  text_normalization.py  tts_datasets.py
tts/data/datasets/: finetuning.py  pretraining.py  rlhf.py
tts/inference/: inferencing.py  quality_validation.py
tts/training/: checkpointing.py  environment.py  evaluation.py  main.py  training_loop.py
tts/training/codec/: codec_datasets.py  codec_quality_validation.py  gan_training_loop.py  train_codec.py
tts/training/rlhf/: ecapa_tdnn.py  reward_utils.py  rewards.py  rlhf_main.py  run_rlhf_combine.sh
tts/utils/: configuration.py  custom_logging.py
